--- a/index.html
+++ b/index.html
@@ -1,1 +1,156 @@
-<meta http-equiv="refresh" content="0;url=https://kaiwen-wang.github.io/ft-rss/src/index.html" />
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./output.css" rel="stylesheet">
+
+    <style>
+        .ruby-under {
+            ruby-position: under;
+        }
+
+        .ruby-inter-character {
+            ruby-position: inter-character;
+        }
+    </style>
+</head>
+
+
+
+<body class="bg-[rgb(253,241,230)]">
+
+    <main class="mx-auto  max-w-4xl   px-4  pt-8 pb-12">
+
+        <!-- <div class="  flex  justify-center mb-8">
+            <a href="https://github.com/kaiwen-wang/ft-rss"
+                class="flex items-center gap-2 pl-7 pr-5 py-3 border-2 rounded-tl-3xl hover:brightness-90  border-[rgb(34,31,32)] bg-[rgb(253,241,230)]">
+                <p class="font-medium ">Github</p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#000000" viewBox="0 0 256 256">
+                    <path
+                        d="M208.31,75.68A59.78,59.78,0,0,0,202.93,28,8,8,0,0,0,196,24a59.75,59.75,0,0,0-48,24H124A59.75,59.75,0,0,0,76,24a8,8,0,0,0-6.93,4,59.78,59.78,0,0,0-5.38,47.68A58.14,58.14,0,0,0,56,104v8a56.06,56.06,0,0,0,48.44,55.47A39.8,39.8,0,0,0,96,192v8H72a24,24,0,0,1-24-24A40,40,0,0,0,8,136a8,8,0,0,0,0,16,24,24,0,0,1,24,24,40,40,0,0,0,40,40H96v16a8,8,0,0,0,16,0V192a24,24,0,0,1,48,0v40a8,8,0,0,0,16,0V192a39.8,39.8,0,0,0-8.44-24.53A56.06,56.06,0,0,0,216,112v-8A58.14,58.14,0,0,0,208.31,75.68ZM200,112a40,40,0,0,1-40,40H112a40,40,0,0,1-40-40v-8a41.74,41.74,0,0,1,6.9-22.48A8,8,0,0,0,80,73.83a43.81,43.81,0,0,1,.79-33.58,43.88,43.88,0,0,1,32.32,20.06A8,8,0,0,0,119.82,64h32.35a8,8,0,0,0,6.74-3.69,43.87,43.87,0,0,1,32.32-20.06A43.81,43.81,0,0,1,192,73.83a8.09,8.09,0,0,0,1,7.65A41.72,41.72,0,0,1,200,104Z">
+                    </path>
+                </svg>
+            </a>
+            <a href="/rss.xml"
+                class="flex items-center gap-2 pr-7 pl-6 border-t-2 border-r-2 hover:brightness-90 border-b-2 rounded-br-3xl border-[rgb(34,31,32)] bg-[rgb(253,241,230)]">
+                <p class="font-medium">RSS</p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#000000" viewBox="0 0 256 256">
+                    <path
+                        d="M106.91,149.09A71.53,71.53,0,0,1,128,200a8,8,0,0,1-16,0,56,56,0,0,0-56-56,8,8,0,0,1,0-16A71.53,71.53,0,0,1,106.91,149.09ZM56,80a8,8,0,0,0,0,16A104,104,0,0,1,160,200a8,8,0,0,0,16,0A120,120,0,0,0,56,80Zm118.79,1.21A166.9,166.9,0,0,0,56,32a8,8,0,0,0,0,16A151,151,0,0,1,163.48,92.52,151,151,0,0,1,208,200a8,8,0,0,0,16,0A166.9,166.9,0,0,0,174.79,81.21ZM60,184a12,12,0,1,0,12,12A12,12,0,0,0,60,184Z">
+                    </path>
+                </svg>
+            </a>
+        </div> -->
+
+
+        <h1 class=" font-headings text-3xl ">
+            FT Most Read RSS Feed
+        </h1>
+        <span class="font-headings text-xl text-gray-700">Delivered as a single article once
+            daily.</span>
+
+
+        <p id="most-read-list" class="mt-4 font-sans font-medium text-sm">Current most read list:</p>
+        <div id="most-read-list-container">
+            <ul class="list-decimal list-inside">
+                <li class="text-blue-500 hover:text-blue-200"><a
+                        href="https://ft.com/content/0da7d91d-6836-4fad-a636-740de2381ee6"> [Opinion]&nbsp;Ukraine has
+                        crossed Moscow’s and Washington’s red lines</a></li>
+                <li class="text-blue-500 hover:text-blue-200"><a
+                        href="https://ft.com/content/18cd1c87-1662-4655-863c-b1cbd378f117"> [Opinion]&nbsp;The world
+                        should take notice — the rest are rising again</a></li>
+                <li class="text-blue-500 hover:text-blue-200"><a
+                        href="https://ft.com/content/c62ca855-c70b-4814-aa47-96d2a0020c16">The inside story of the
+                        secret backchannel between the US and China</a></li>
+                <li class="text-blue-500 hover:text-blue-200"><a
+                        href="https://ft.com/content/5e368d70-b6e2-4433-a747-cdcfab061f27">Top defence contractors set
+                        to rake in record cash after orders soar</a></li>
+                <li class="text-blue-500 hover:text-blue-200"><a
+                        href="https://ft.com/content/5e0437c3-ed49-4ece-870b-eb39818ddc3a">The risks and returns of the
+                        *ultimate* market portfolio</a></li>
+            </ul>
+        </div>
+
+
+        <!-- 
+        <p class="font-medium mt-8 text-lg">This RSS feed using <a class="text-blue-500" href="https://netnewswire.com/">NetNewsWire</a>:</p>
+        <img src="./picture.png" class="rounded-lg border border-black">
+
+
+
+        <p class="font-medium mt-8 text-lg">Existing RSS feeds:</p>
+        <span class="font-headings">Each story is an RSS entry. Unnecessary. Can't see other feeds due to high frequency
+            of news.</span>
+        <img src="./picture-2.png" class="rounded-lg border border-black">
+
+
+
+        <h2 class=" text-lg font-medium mt-4">
+            General thoughts on news:
+        </h2>
+        <article class="prose font-serif">
+
+            <p>
+                Staying informed yet not getting distracted is important. I know that 90% of the news is garbage, but I
+                still find it necessary to roughly know what's going on. For some people, maybe they can browse it once
+                in the morning and let it be. If I look at the front page, I'll inevitably end up scrolling around due
+                to the big pictures and headlines. Getting only the most read stories is a good alternative.
+            </p>
+
+            <p>
+                In my view, a Bloomberg Terminal-like interface is optimal. Focusing your attention is a core part of
+                succeeding in the modern economy. That's why I use a RSS reader and curate my sources from informative
+                blogs, personal websites, substacks, legal news, and so on.
+            </p>
+
+            <p>
+                There aren't any other newspapers I find interesting or relevant. Sources like La Tribune, Süddeutsche
+                Zeitung, and
+                Straits Times seem too regional. Similar to the FT include the WSJ,
+                Economist, and
+                Bloomberg, but they don't quite seem the same quality. The headlines hit lacklustrely, but lately the FT
+                has been like that as well, especially for geopolitical concerns and how they turn off comments. We'll
+                wait and see.
+
+            </p>
+
+            <p>
+                I feel like the most read on Nikkei Asia and Zhihu may bring in interesting new perspectives, and they
+                would be the target of my next RSS Most Read project.
+            </p>
+        </article>
+
+
+    </main>
+
+    <footer class="border-t">
+        <div class="container mx-auto py-4 flex  flex-col items-center font-serif">
+            <p>
+                Created by Kaiwen Wang
+            </p>
+
+
+            <p>
+                This tool is not associated with the Financial Times.
+            </p>
+        </div>
+    </footer> -->
+        <!-- 
+            <p>
+                There's a small issue where my RSS reader (NetNewsWire) replaces only adds a new article if it sees a
+                new rss.xml.
+                I need to find a way where it includes all the past posts in the current rss.xml. Othewise if I don't
+                open the RSS reader for a
+                few days, I miss the previous stories.
+
+                Simultaneously, I don't want any new user who uses the tool to be spammed with 1000 old stories. So I'm
+                not sure what the best answer is there.
+            </p> -->
+
+
+
+</body>
+
+</html>
